--- a/CarSalesProject/Web.config
+++ b/CarSalesProject/Web.config
@@ -78,5 +78,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
- <connectionStrings>
-   <add name="CarSalesEntities" connectionString="metadata=res://*/CarSalesDataModel.csdl|res://*/CarSalesDataModel.ssdl|res://*/CarSalesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VQPD60;initial catalog=CarSales;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+  <add name="CarSalesEntities" connectionString="metadata=res://*/CarSalesDataModel.csdl|res://*/CarSalesDataModel.ssdl|res://*/CarSalesDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-6VQPD60;initial catalog=CarSales;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
+</configuration>
