--- a/CarSalesProject/CarSalesProject.csproj
+++ b/CarSalesProject/CarSalesProject.csproj
@@ -206,11 +206,16 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\GestionVehicules\AjoutVehicule.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
-    <Content Include="Views\Account\Location.cshtml" />
+    <Content Include="Views\Location\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Administrateur\" />
+    <Folder Include="Views\Entretien\" />
+    <Folder Include="Views\GestionVehicule\" />
+    <Folder Include="Views\Plein\" />
+    <Folder Include="Views\Vente\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
